examples/examples_inferred/bad/06-runtime_error_zero_div.ez
rememberCholerae x = x / 0;

main = rememberCholerae 13;
